force-app/main/default/objects/ObjectTimelineParent__mdt/ObjectTimelineParent__mdt.object-meta.xml
<CustomObject>
    <label>Object Timeline Parent</label>
    <pluralLabel>Object Timeline Parents</pluralLabel>
</CustomObject>