force-app/main/default/objects/ObjectTimelineParent__mdt/fields/AppAPIName__c.field-meta.xml
<CustomField>
    <fullName>AppAPIName__c</fullName>
    <description
    >Add the API name for the app this configuration should be valid for (e.g., Sales, Service, TAG_NAV_default)</description>
    <inlineHelpText
    >Add the API name for the app this configuration should be valid for (e.g., Sales, Service, TAG_NAV_default)</inlineHelpText>
    <label>App API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>