force-app/main/default/objects/ObjectTimelineParent__mdt/fields/ConfigId__c.field-meta.xml
<CustomField>
    <fullName>ConfigId__c</fullName>
    <description>Will be used in ObjectTimeline LWC to find correct configuration</description>
    <inlineHelpText>Will be used in ObjectTimeline LWC to find correct configuration</inlineHelpText>
    <label>Config ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>