force-app/main/default/objects/ObjectTimelineParent__mdt/fields/CreateableObject_Checkbox__c.field-meta.xml
<CustomField>
	<fullName>CreateableObject_Checkbox__c</fullName>
	<defaultValue>false</defaultValue>
	<description
    >Check this box to allow the user to create a new object of this kind and subtype. If this configuration contains a subtype, that subtype is automatically set. The relationship lookup is automatically put in, as well.</description>
	<inlineHelpText
    >Check this box to allow the user to create a new object of this kind and subtype. If this configuration contains a subtype, that subtype is automatically set. The relationship lookup is automatically put in, as well.</inlineHelpText>
	<label>Show Object in Dropdown Menu</label>
	<type>Checkbox</type>
</CustomField>