force-app/main/default/objects/ObjectTimelineParent__mdt/fields/Object_Timeline_Child__c.field-meta.xml
<CustomField>
    <fullName>Object_Timeline_Child__c</fullName>
    <description>The child record to be shown in the object timeline</description>
    <inlineHelpText>The child record to be shown in the object timeline</inlineHelpText>
    <label>Child Config</label>
    <referenceTo>ObjectTimelineChild__mdt</referenceTo>
    <relationshipLabel>Object Timelines</relationshipLabel>
    <relationshipName>Object_Timelines1</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>