force-app/main/default/objects/ObjectTimelineParent__mdt/fields/SObjectAssigneeId__c.field-meta.xml
<CustomField>
	<fullName>SObjectAssigneeId__c</fullName>
	<description>Put in the SObject Field Name for the owner or assignee of the object.
If not empty, the name is appended to the subtitle.</description>
	<inlineHelpText>Put in the SObject Field Name for the owner or assignee of the object.
If not empty, the name is appended to the subtitle.</inlineHelpText>
	<label>Assignee/Owner SObject Field</label>
	<length>255</length>
	<type>Text</type>
</CustomField>