force-app/main/default/objects/ObjectTimelineParent__mdt/fields/SObjectParent__c.field-meta.xml
<CustomField>
	<fullName>SObjectParent__c</fullName>
	<description>The SObject Parent that should be queried (e.g., Account, Contact, Case, CustomObject__c).</description>
	<inlineHelpText
    >The SObject Parent that should be queried (e.g., Account, Contact, Case, CustomObject__c).</inlineHelpText>
	<label>Parent SObject API Name</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>