force-app/main/default/objects/ObjectTimelineParent__mdt/validationRules/SetMacroIfDropdownOptionIsChecked.validationRule-meta.xml
<ValidationRule>
    <fullName>SetMacroIfDropdownOptionIsChecked</fullName>
    <active>true</active>
    <errorConditionFormula>IsMacro__c &amp;&amp; !CreateableObject_Checkbox__c</errorConditionFormula>
    <errorDisplayField>IsMacro__c</errorDisplayField>
    <errorMessage>Can&apos;t set as macro without being able to see it in the dropdown menu</errorMessage>
</ValidationRule>